Update Waitlist section with emoji layout and spacing fixes

--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,9 @@ body {
 }
 
 
+@font-face {
+  font-family: 'BigNoodleTitling';
+  src: url('./assets/fonts/BigNoodleTitling.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
